test/bad/functions/call2.px

func f(Int x) def
    return

func main() Int def
    f(f(5))
    return 0
